src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');

*,
*::before,
*::after {
  box-sizing: border-box;
}

input,
button,
textarea,
select {
  font: inherit;
}

:root {
  --typed_chars: 6;
  --col_correct: #F7B931;
  --col_typo: #FF4D4D;
  --col_untyped: #0F1211;

  font-family: "Atkinson Hyperlegible Mono", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-size: xx-large;
  font-synthesis: none;
  color: #C8C8DA;
  text-rendering: optimizeLegibility;

  background-color: #5D7A6F;

  --char-unit: 1.05em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.app-grid {
  --padding-inline: 1em;
  --core-max-width: 60ch;

  display: grid;
  grid-template-columns: [full-width-start] minmax(var(--padding-inline), 1fr) [core-start] min(100% - (var(--padding-inline) * 2), var(--core-max-width)) [core-end] minmax(var(--padding-inline), 1fr) [full-width-end];
  grid-template-rows: 60vh [typer-start] 8lh [typer-end];
}

.app-grid>* {
  outline: solid;
  grid-column: core;
}

#typer {
  display: grid;
  grid-row: typer;
  outline: solid;
  position: relative;
  grid-template: inherit;
  grid-column: full-width;
}

#typer-display {
  overflow-y: scroll;
  position: relative;
  height: 8lh;
  scrollbar-width: none;
  grid-column: core;
}

char {
  color: var(--col_untyped);
  margin: 0px;
  padding: 0px;
}

.typo {
  color: var(--col_typo);

}

.typo[data-typed=" "] {
  background-color: var(--col_typo);
}

.correct {
  color: var(--col_correct);
}

#typer>.overlay {
  display: grid;
  position: absolute;
  width: 100%;
  height: 100%;
  grid-column: full-width;
  z-index: 1;
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(5px) contrast(70%) drop-shadow(15px 0px gray);
}

kbd>key {
  border-radius: 3px;
  padding: 0px 1px;
  border: 1px solid black;
  margin-inline: 1px;
}

#connectButton {
  place-self: center;
}

